--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ main {
     padding: 1rem 1rem 1rem 5rem;
 }
 .profile-details {
-    margin-top: 10;
+    margin-top: 10rem;
 }
 hr{
     margin: 10px 0px;
