--- a/style.css
+++ b/style.css
@@ -11,6 +11,29 @@ header {
     font-size: 14px;
     background-color: #000;
 }
+#side-menu {
+    display: none;
+    position: fixed;
+    z-index: 9999;
+    right:0;
+    background-color: #000;
+    width: 25%;
+    top: 0;
+    bottom: 0;
+}
+#side-menu ul {
+    margin: 0;
+    padding: 0;
+}
+#side-menu ul li {
+    list-style-type: none;
+    background-color: #fff;
+    padding: 10px;
+    margin: 5px;
+}
+#side-menu button {
+    margin: 5px;
+}
 .position-sticky {
     position: sticky;
     top: 0px;
@@ -22,6 +45,11 @@ header {
 }
 .float-right {
     text-align: right;
+}
+.float-right button {
+    margin: 5px;
+    padding: 5px;
+    font-size: 16px;
 }
 .float-right a {
     color: #fff;
